# explorer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  imgui.ini
.cache/clangd/index/: AppDelegate.cpp.271257C379B7D6BE.idx  AppDelegate.h.C28693FA772883AD.idx  AppKit.hpp.600DE8597720DEE2.idx  AppKitPrivate.hpp.A68B811FFD9D411D.idx  AppProperties.h.A1883C2D934D083E.idx  CADefines.hpp.9C1E712F2924F478.idx  CAMetalDrawable.hpp.0B38C23F82EF40E0.idx  CAMetalLayer.hpp.438A92A2C630417E.idx  CAPrivate.hpp.88F269DDA80443FD.idx  Events.h.4D021BA87F13C887.idx  Foundation.hpp.3D0F7E926375C9C2.idx  GCView.h.BC18EAEF8EF81903.idx  GCView.mm.326DA5177B0F1D10.idx  GameControlAdapter.cpp.0CBB5DD98E508C83.idx  GameControlAdapter.h.9C2611E5440F5E73.idx  KeyEvent.h.515CE24C0A9DAFA3.idx  KeyboardAdapter.h.350F9C508C3CAAE9.idx  KeyboardAdapter.hpp.DC5AA73C60F27AC1.idx  KeyboardAdapter.mm.1AB17E10856EBAE2.idx  Logger.cpp.961E6EA059348835.idx  Logger.h.3370D58E9BD8C2F7.idx  MTKView.hpp.307BF4B7CDF0FDE3.idx  MTLAccelerationStructure.hpp.56564BB59E16EDDA.idx  MTLAccelerationStructureCommandEncoder.hpp.81DA633D0257E479.idx  MTLAccelerationStructureTypes.hpp.AC8E104512FDDC02.idx  MTLArgument.hpp.5D900853F8F8C3F6.idx  MTLArgumentEncoder.hpp.5B277D710F175FC9.idx  MTLBinaryArchive.hpp.97CE11AEFC51488B.idx  MTLBlitCommandEncoder.hpp.E375BF1B3A3047CF.idx  MTLBlitPass.hpp.8D3BDDA83AAF72D3.idx  MTLBuffer.hpp.47E8B33ED399CDB6.idx  MTLCaptureManager.hpp.F2FE409761E62362.idx  MTLCaptureScope.hpp.C5F7F23345419CF0.idx  MTLCommandBuffer.hpp.B661C1D8C5C9E20B.idx  MTLCommandEncoder.hpp.E1B3051FA9A3F416.idx  MTLCommandQueue.hpp.82B50D2C6ABC5DBE.idx  MTLComputeCommandEncoder.hpp.2749DA671513C224.idx  MTLComputePass.hpp.84FB5F28D141868C.idx  MTLComputePipeline.hpp.43940D9DCCEDB68B.idx  MTLCounters.hpp.D6CDAAE33D30D196.idx  (+126 more)
src/: config.h  main.cpp  pch.h  util.cpp  util.h
src/Assets/Meshes/f16/: f16.mtl
src/Control/: AppDelegate.cpp  AppDelegate.h  AppProperties.h  Logger.cpp  Logger.h  ViewAdapter.hpp  ViewDelegate.cpp  ViewDelegate.h  ViewExtender.h  ViewExtender.mm
src/DB/: MeshRepository.mm  Repository.h  Repository.hpp  ShaderRepository.cpp  TextureRepository.mm
src/Events/: Events.h  IOState.cpp  IOState.h  KeyCodes.h  KeyEvent.h  MouseEvent.h
src/Layer/: BaseLayer.cpp  BaseLayer.h  ImGuiLayer.h  ImGuiLayer.mm  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  RayTraceLayer.cpp  RayTraceLayer.h
src/Log/: Logger.cpp  Logger.h
src/Math/: Transformation.cpp  Transformation.h
src/Model/: Camera.cpp  Camera.h  CameraOrtho.cpp  CameraOrtho.h  Mesh.cpp  Mesh.h  MeshFactory.cpp  MeshFactory.h  Object.cpp  Object.h  ResourceManager.cpp  ResourceManager.h  Submesh.cpp  Submesh.h
src/Renderer/: Acceleration.cpp  Acceleration.h  Accelerator.cpp  Accelerator.h  Buffer.cpp  Buffer.h  Descriptor.cpp  Descriptor.h  Draw.cpp  Draw.h  Heap.cpp  Heap.h  Layout.cpp  Layout.h  Renderer.cpp  Renderer.h  State.cpp  State.h  Types.h
src/Shaders/: GBuffer.metal  General.metal  General.metallib  General.metallib.old  Light.metal  RTUtils.h  RayTracing.metal  RayUtils.h  ReSTIR.metal  RestirGI.metal  RestirGIAlso.metal  ShaderRepository.cpp  ShaderRepository.h  ShaderTypes.h  TempSpacial.metal  Temporal.metal  Triangle.metal  shaders.metallib
src/View/: Renderer.cpp  Renderer.h  Transformation.cpp  Transformation.h  ViewAdapter.hpp  ViewDelegate.cpp  ViewDelegate.h  ViewExtender.h  ViewExtender.mm
tests/: test_basic_syntax.cpp  test_int_mock.cpp
